# CPP-External-Roblox-Base

./: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  vcpkg.json
Roblox/: RBXBytecode.cpp  RBXBytecode.hpp  RBXInstance.cpp  RBXInstance.hpp  offsets.hpp
Roblox/DataModel/: RBXDataModel.cpp  RBXDataModel.hpp
UserMode/: Memory.cpp  Memory.hpp  unhook.cpp  unhook.hpp
utils/: NTDLL_FAST.cpp  NTDLL_FAST.hpp  utils.hpp
